# dlg_service

./: Makefile.am  common.mk  configure.ac
hint-3.0.1/: Makefile.am  Makefile.in  configure  configure.ac
hint-3.0.1/src/QueryMatch/: QueryMatch.cpp
hint-3.0.1/src/common_base/: Makefile.in  database.cpp
locate_getresult/: Makefile.in  locate_getresult.h
locate_getresult/.deps/: liblocateresult_la-locate_getresult.Plo
locate_getresult/.libs/: liblocateresult.lai  liblocateresult.so.0.0.0
src/QueryMatch/: Makefile  Makefile.am  Makefile.in  QueryMatch.cpp  QueryMatch.h  WordListSignle.h
src/common_base/: Makefile  Makefile.am  common_base_test.cpp  database.h
src/da_search/: Da_Search.cpp  Da_Search.h  Makefile  Makefile.am  Makefile.in
src/dialogue/: Makefile  Makefile.am  Makefile.in  dialogue.cpp  dialogue.h  tags  test.cpp  test_run
src/doc_search/: Doc_Search.cpp  Doc_Search.h  Makefile  Makefile.am  Makefile.in
src/http_client/: HttpClient.cpp  HttpClient.hpp  HttpRequest.cpp  HttpRequest.hpp  HttpResponse.cpp  HttpResponse.hpp  Makefile  Makefile.am  Makefile.in  httpclient  main.cpp
src/http_client/.deps/: HttpClient.Po  HttpRequest.Po  HttpResponse.Po  main.Po
src/http_client/.libs/: httpclient
src/http_server/: HttpHandler.cpp  HttpHandler.hpp  HttpResponse.cpp  HttpResponse.hpp  Makefile  Makefile.am  Makefile.am.bak  Makefile.in  config_map.hpp  configuration.cpp  configuration.hpp  http.cfg  http_server.cpp  http_server.hpp  httpserver  main.cpp  restart.sh  start.sh  stop.sh  tags  worker.hpp
src/include/: string_Util.cpp  string_Util.h
src/include/Utils/: Makefile  Makefile.in  editDist
src/include/Utils/.deps/: editDist.Po
src/include/Utils/.libs/: editDist
src/include/common/: Makefile  Makefile.in  tf_idf
src/include/gary_common/: gary_string.h
src/index/data_make/: Makefile  Makefile.am  Makefile.in  dlg_log_index.cpp  dlg_log_index.h  dlg_log_index_make_index  dlg_log_index_make_index.cpp
src/index/data_make/.svn/: all-wcprops  entries
src/index/data_make/.svn/text-base/: Makefile.am.svn-base  poi_log_index.cpp.svn-base  poi_log_index.h.svn-base  poi_log_index_make_index.cpp.svn-base  poi_log_index_test.cpp.svn-base
src/index/index_da/: FormatDlgCor.cpp  Index_da.cpp  Index_da.h  Makefile  Makefile.am  Makefile.in  index_da_make_index  index_da_make_index.cpp  readme  run.sh
src/index/inv_index/: Makefile  Makefile.am  Makefile.in  doc_index.cpp  doc_index.h  doc_index_make_index  doc_index_make_index.cpp  ex.py  get_diff.py  get_postfix.cpp  get_postfix.sh  normalize  normalize.cpp  normalize.h  normalize_main.cpp  post_process_postfix.py
src/jsoncpp/: Makefile  Makefile.am  Makefile.in
src/jsoncpp/json/.svn/: all-wcprops  entries
src/locate_getresult/: Makefile  Makefile.am  liblocateresult.la  liblocateresult_la-locate_getresult.lo  locate_getresult.cpp
src/locate_getresult/.libs/: liblocateresult.la  liblocateresult.so.0
src/segment/: Makefile  Makefile.am  Makefile.in  Segment.cpp  Segment.h  main.cpp  test.txt
src/simhash/: Makefile.am  Makefile.bak  comdef.h  hashsign.cpp  hashsign.h  sim_conf.cpp  sim_conf.h  sim_include.h  sim_struct.h  utils.cpp  utils.h
src/simhash/bak/: ks.cpp.bak  normalize.cpp  normalize.h  redis.cpp  redis.h  segmentor.cpp  segmentor.h  sim_process.cpp  sim_process.h  termrate.cpp  termrate.h
src/simhash/data/.svn/: all-wcprops  entries
src/simhash/data/.svn/text-base/: simconf.svn-base
src/test/: Makefile  Makefile.am  Makefile.in  start.sh  test.cpp  test_run
src/test/.deps/: test.Po
src/test/.libs/: test_run
