include $(top_srcdir)/common.mk

SUBDIRS=src/jsoncpp src/common_base src/QueryMatch src/index/index_da src/locate_getresult src/index/inv_index/ src/index/data_make src/da_search src/doc_search src/dialogue src/http_client src/http_server src/test src/segment src/include/common src/include/Utils/
export @MODULE_ROOT_VARS@
export BUILD_DEPENDENCIES
